--- a/index.html
+++ b/index.html
@@ -103,6 +103,9 @@
         </div>
       </div>
     </div>
+    <a href="https://github.com/ashleacodes/Weather-App-SheCodes-Plus"
+      >GitHub Link</a
+    >
     <script src="src/app.js"></script>
   </body>
 </html>
