--- a/index.html
+++ b/index.html
@@ -103,9 +103,12 @@
         </div>
       </div>
     </div>
-    <a href="https://github.com/ashleacodes/Weather-App-SheCodes-Plus"
-      >GitHub Link</a
-    >
+    <p>
+      Made by Ashlea Grunwald - Open Source Code on
+      <a href="https://github.com/ashleacodes/Weather-App-SheCodes-Plus"
+        >GitHub</a
+      >
+    </p>
     <script src="src/app.js"></script>
   </body>
 </html>
