Updated link to open new window

--- a/index.html
+++ b/index.html
@@ -105,7 +105,9 @@
     </div>
     <p>
       Made by Ashlea Grunwald - Open Source Code on
-      <a href="https://github.com/ashleacodes/Weather-App-SheCodes-Plus"
+      <a
+        href="https://github.com/ashleacodes/Weather-App-SheCodes-Plus"
+        target="_blank"
         >GitHub</a
       >
     </p>
