Updated background image & removed precipitation

--- a/index.html
+++ b/index.html
@@ -60,18 +60,14 @@
               <div class="weather-current">
                 <i id="current-temp"> 18 </i
                 ><span class="temperature">
-                  <a href="#" id="celsius-link">°C</a> |<a
-                    href="#"
-                    id="fahrenheit-link"
-                    >°F</a
-                  >
+                  <a href="#" id="celsius-link">°C</a> |
+                  <a href="#" id="fahrenheit-link"> °F</a>
                   <br />
                 </span>
                 <div class="weather-details">
                   <ul>
                     <li id="humid">Humidity: 85%</li>
                     <li id="windy">Wind: 23km/h</li>
-                    <li id="precip">Precipitation: 50mm</li>
                   </ul>
                 </div>
               </div>
@@ -103,12 +99,12 @@
       </div>
     </div>
     <p>
-      Made by Ashlea Grunwald - Open Source Code on
       <a
         href="https://github.com/ashleacodes/Weather-App-SheCodes-Plus"
         target="_blank"
-        >GitHub</a
+        >Open Source Code</a
       >
+      by Ashlea Grunwald
     </p>
     <script src="src/app.js"></script>
   </body>
