Updated HTML content layout

--- a/index.html
+++ b/index.html
@@ -46,58 +46,53 @@
             <input type="submit" class="btn btn-info" value="Current" />
           </form>
           <br />
-          <div class="row">
-            <div class="col-6">
-              <div class="location-current">
+          <h2 id="current-city">Adelaide</h2>
+          <h4 id="current-date">Monday 12 Dec 2022</h4>
+
+          <div class="col-6">
+            <div class="weather-current">
+              <i id="current-temp"> 18 </i
+              ><span class="temperature">
+                <a href="#" id="celsius-link">°C</a> |
+                <a href="#" id="fahrenheit-link"> °F</a>
+                <br />
+              </span>
+              <div class="weather-details">
                 <ul>
-                  <li id="current-city">Adelaide</li>
-                  <li id="current-time">Sunday 1:00pm</li>
-                  <li id="current-weather">Cloudy</li>
+                  <li id="humid">Humidity: 85%</li>
+                  <li id="windy">Wind: 23km/h</li>
                 </ul>
               </div>
             </div>
-            <div class="col-6">
-              <div class="weather-current">
-                <i id="current-temp"> 18 </i
-                ><span class="temperature">
-                  <a href="#" id="celsius-link">°C</a> |
-                  <a href="#" id="fahrenheit-link"> °F</a>
-                  <br />
-                </span>
-                <div class="weather-details">
-                  <ul>
-                    <li id="humid">Humidity: 85%</li>
-                    <li id="windy">Wind: 23km/h</li>
-                  </ul>
-                </div>
-              </div>
-            </div>
           </div>
-          <br />
+        </div>
+        <h4 id="current-weather">Cloudy</h4>
+        <h4 id="current-time">1:00pm</h4>
+        <br />
 
-          <div class="row">
-            <div class="col-2">
-              Mon <i class="fa-solid fa-cloud-rain"> </i> 18°C
-            </div>
-            <div class="col-2">
-              Tue <i class="fa-solid fa-cloud-bolt"> </i> 20°C
-            </div>
-            <div class="col-2">
-              Wed <i class="fa-solid fa-cloud-sun-rain"> </i> 19°C
-            </div>
-            <div class="col-2">
-              Thu <i class="fa-solid fa-cloud-rain"> </i> 21°C
-            </div>
-            <div class="col-2">
-              Fri <i class="fa-solid fa-cloud-sun-rain"> </i> 22°C
-            </div>
-            <div class="col-2">
-              Sat <i class="fa-solid fa-cloud-sun"> </i> 20°C
-            </div>
+        <div class="row">
+          <div class="col-2">
+            Mon <i class="fa-solid fa-cloud-rain"> </i> 18°C
+          </div>
+          <div class="col-2">
+            Tue <i class="fa-solid fa-cloud-bolt"> </i> 20°C
+          </div>
+          <div class="col-2">
+            Wed <i class="fa-solid fa-cloud-sun-rain"> </i> 19°C
+          </div>
+          <div class="col-2">
+            Thu <i class="fa-solid fa-cloud-rain"> </i> 21°C
+          </div>
+          <div class="col-2">
+            Fri <i class="fa-solid fa-cloud-sun-rain"> </i> 22°C
+          </div>
+          <div class="col-2">
+            Sat <i class="fa-solid fa-cloud-sun"> </i> 20°C
           </div>
         </div>
       </div>
     </div>
+
     <p>
       <a
         href="https://github.com/ashleacodes/Weather-App-SheCodes-Plus"
