--- a/index.html
+++ b/index.html
@@ -46,48 +46,41 @@
             <input type="submit" class="btn btn-info" value="Current" />
           </form>
           <br />
-          <h2 id="current-city">Adelaide</h2>
+          <h2 id="current-city"><strong>Adelaide</strong></h2>
           <h4 id="current-date">Monday 12 Dec 2022</h4>
 
-          <div class="col-6">
-            <div class="weather-current">
-              <i id="current-temp"> 18 </i
-              ><span class="temperature">
-                <a href="#" id="celsius-link">°C</a> |
-                <a href="#" id="fahrenheit-link"> °F</a>
-                <br />
-              </span>
-              <div class="weather-details">
-                <ul>
-                  <li id="humid">Humidity: 85%</li>
-                  <li id="windy">Wind: 23km/h</li>
-                </ul>
-              </div>
+          <div class="col">
+            <i id="current-temp">18 </i>
+            <a href="#" id="celsius-link">°C</a> |
+            <a href="#" id="fahrenheit-link"> °F</a>
+
+            <div class="weather-details">
+              <ul>
+                <li id="humid">Humidity: 85%</li>
+                <li id="windy">Wind: 23km/h</li>
+              </ul>
             </div>
           </div>
         </div>
-        <h4 id="current-weather">Cloudy</h4>
+        <h4 id="current-weather"><strong>Cloudy</strong></h4>
         <h4 id="current-time">1:00pm</h4>
         <br />
 
         <div class="row">
-          <div class="col-2">
+          <div class="col">
             Mon <i class="fa-solid fa-cloud-rain"> </i> 18°C
           </div>
-          <div class="col-2">
+          <div class="col">
             Tue <i class="fa-solid fa-cloud-bolt"> </i> 20°C
           </div>
-          <div class="col-2">
+          <div class="col">
             Wed <i class="fa-solid fa-cloud-sun-rain"> </i> 19°C
           </div>
-          <div class="col-2">
+          <div class="col">
             Thu <i class="fa-solid fa-cloud-rain"> </i> 21°C
           </div>
-          <div class="col-2">
+          <div class="col">
             Fri <i class="fa-solid fa-cloud-sun-rain"> </i> 22°C
-          </div>
-          <div class="col-2">
-            Sat <i class="fa-solid fa-cloud-sun"> </i> 20°C
           </div>
         </div>
       </div>
