--- a/index.html
+++ b/index.html
@@ -56,15 +56,15 @@
 
             <div class="weather-details">
               <ul>
-                <li id="humid">Humidity: 85%</li>
-                <li id="windy">Wind: 23km/h</li>
+                <li>Humidity: <span id="humid">85</span>%</li>
+                <li>Wind: <span id="windy">23</span>km/h</li>
               </ul>
             </div>
           </div>
         </div>
         <h4 id="current-weather"><strong>Cloudy</strong></h4>
         <h4 id="current-time">1:00pm</h4>
-        <br />
+        <hr />
 
         <div class="row">
           <div class="col">
