--- a/index.html
+++ b/index.html
@@ -54,11 +54,7 @@
             <a href="#" id="celsius-link">°C</a> |
             <a href="#" id="fahrenheit-link"> °F</a>
             <div class="d-flex">
-              <img
-                src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
-                alt="mostly cloudy"
-                id="icon"
-              />
+              <img src=" " alt="mostly cloudy" id="icon" />
             </div>
             <div class="weather-details">
               <ul>
