--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
           <div class="col">
             <strong id="current-temp">18 </strong>
-            <a href="#" id="celsius-link">°C</a> |
+            <a href="#" id="celsius-link" class="active">°C</a> |
             <a href="#" id="fahrenheit-link"> °F</a>
             <div class="d-flex">
               <img src=" " alt="mostly cloudy" id="icon" />
