--- a/index.html
+++ b/index.html
@@ -43,7 +43,12 @@
               id="search-input"
             />
             <input type="submit" class="btn btn-primary" value="Search" />
-            <input type="submit" class="btn btn-info" value="Current" />
+            <input
+              type="submit"
+              class="btn btn-info"
+              value="Current"
+              id="current-location-button"
+            />
           </form>
           <br />
           <h2 id="current-city">Adelaide</h2>
@@ -54,7 +59,7 @@
             <a href="#" id="celsius-link" class="active">°C</a> |
             <a href="#" id="fahrenheit-link"> °F</a>
             <div class="d-flex">
-              <img src=" " alt="mostly cloudy" id="icon" />
+              <img src=" " alt="weather icon" id="icon" />
             </div>
             <div class="weather-details">
               <ul>
