Updated weather icon and HTML headings

--- a/index.html
+++ b/index.html
@@ -51,20 +51,24 @@
             />
           </form>
           <br />
-          <h2 id="current-city">Adelaide</h2>
+          <h2 id="current-city">City</h2>
           <h4 id="current-date">Monday 12 Dec 2022</h4>
 
           <div class="col">
-            <strong id="current-temp">18 </strong>
+            <strong id="current-temp">... </strong>
             <a href="#" id="celsius-link" class="active">°C</a> |
             <a href="#" id="fahrenheit-link"> °F</a>
             <div class="d-flex">
-              <img src="" alt="weather icon" id="icon" />
+              <img
+                src="https://openweathermap.org/img/wn/50d@2x.png"
+                alt="weather icon"
+                id="icon"
+              />
             </div>
             <div class="weather-details">
               <ul>
-                <li>Humidity: <span id="humid">85</span>%</li>
-                <li>Wind: <span id="windy">23</span>km/h</li>
+                <li>Humidity: <span id="humid">...</span>%</li>
+                <li>Wind: <span id="windy">...</span>km/h</li>
               </ul>
             </div>
           </div>
