Added forecast function template to JS

--- a/index.html
+++ b/index.html
@@ -76,24 +76,7 @@
         <h4 id="current-weather">Cloudy</h4>
         <h4 id="current-time">1:00pm</h4>
         <hr />
-
-        <div class="row">
-          <div class="col">
-            Mon <i class="fa-solid fa-cloud-rain"> </i> 18°C
-          </div>
-          <div class="col">
-            Tue <i class="fa-solid fa-cloud-bolt"> </i> 20°C
-          </div>
-          <div class="col">
-            Wed <i class="fa-solid fa-cloud-sun-rain"> </i> 19°C
-          </div>
-          <div class="col">
-            Thu <i class="fa-solid fa-cloud-rain"> </i> 21°C
-          </div>
-          <div class="col">
-            Fri <i class="fa-solid fa-cloud-sun-rain"> </i> 22°C
-          </div>
-        </div>
+        <div class="weather-forecast" id="forecast"></div>
       </div>
     </div>
 
