--- a/index.html
+++ b/index.html
@@ -55,8 +55,10 @@
           <h4 id="current-date">Monday 12 Dec 2022</h4>
 
           <div class="col">
-            <strong id="current-temp">... </strong>°C
-            <div class="d-flex weather-temperature">
+            <strong id="current-temp">... </strong>
+            <a href="#" id="celsius-link" class="active">°C</a> |
+            <a href="#" id="fahrenheit-link"> °F</a>
+            <div class="d-flex">
               <img
                 src="https://openweathermap.org/img/wn/50d@2x.png"
                 alt="weather icon"
