Fixed search function refresh page bug

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="card-body">
           <form id="search-form">
             <input
-              type="text"
+              type="search"
               class="form-control"
               placeholder="Search city or location..."
               autocomplete="off"
@@ -51,7 +51,7 @@
             />
           </form>
           <br />
-          <h2 id="current-city">City</h2>
+          <h2 id="current-city">City results here...</h2>
           <h4 id="current-date">Monday 12 Dec 2022</h4>
 
           <div class="col">
